# MediPathScanner

./: .gitignore  CMakeLists.txt  config.yml
src/: Defs.hpp  Util.cpp  Util.hpp  main.cpp
src/alg/: AlgService.cpp  AlgService.hpp  region.cpp  region.hpp  shapeness.cpp  shapeness.hpp  stitch.cpp  stitch.hpp
src/dahua/: DahuaCamera.cpp  DahuaCamera.hpp  DahuaService.cpp  DahuaService.hpp  FrameCopy.cpp  FrameCopy.hpp
src/exception/: AppException.hpp
src/net/: NetService.cpp  NetService.hpp
src/scan/: ScanRegion.cpp  ScanRegion.hpp  ScanService.cpp  ScanService.hpp  ScanTask.cpp  ScanTask.hpp
src/smc/: ErrCodeDef.h  SMCEngine.h  SMCService.cpp  SMCService.hpp
